--- a/app.json
+++ b/app.json
@@ -44,13 +44,13 @@
       },    
       "SQLALCHEMY_DATABASE_URI": {
          "description": "Your postgres sql db, empty this field if you dont have one.",
-         "required": false,
+         "required": true,
          "value": "sqldbtype://username:pw@hostname:port/db_name"
       },
          "RemoveBG_API": {
             "description": "Get this api from https://www.remove.bg/b/background-removal-api",
             "value": "",
-            "required": false
+            "required": true
         },
       "OWNER_ID": {
          "description": "Your user ID as an integer.",
@@ -93,7 +93,7 @@
       },
       "sw_api": {
          "description": "Spamwatch API Token, Get one from @SpamWatchBot.",
-         "required": false,
+         "required": true,
          "value": ""
       }, 
       "STRICT_GBAN": {
@@ -117,7 +117,7 @@
       },
       "WOLVES": {
          "description": "A space separated list of user IDs who you want to assign as whitelisted - can't be banned with your bot.",
-         "required": false,
+         "required": true,
          "value": "1391755824 1758509403 1848277863"
       },
       "ENV": {
@@ -164,7 +164,7 @@
       },
       "AI_API_KEY": {
       "description": "Make your bot talk using Intellivoid's chatbot API, get your key from https://coffeehouse.intellivoid.net/",
-         "required": false,
+         "required": true,
          "value": ""
    },      
       "BAN_STICKER": {
